<resources>
    <string name="app_name">HalEat</string>
    <string name="picture">Click</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_title">HalEat</string>
    <string name="slide_desc">Hal eat, human!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="stadistic">Stadistic</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="otras_opciones">Otras Opciones</string>

    <!-- Fragment Stadistic -->
    <string name="day">Dia</string>
    <string name="week">Semana</string>
    <string name="grasas">grasas</string>
    <string name="calories">calorías</string>
    <string name="proteins">proteínas</string>
    <string name="hidratos">hidratos</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
