<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_camera"
            android:icon="@drawable/ic_travel"
            android:title="@string/camera"/>
        <item
            android:id="@+id/menu_stadistic"
            android:icon="@drawable/ic_food"
            android:title="@string/stadistic"/>

    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_contact"
                android:icon="@drawable/ic_discount"
                android:title="@string/contact"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_discount"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>