<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haleat.haleat.DayStadisticFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/day"
            android:gravity="center"
            android:textSize="@dimen/font_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/layout_calories_day">
            <com.haleat.haleat.RectView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/rect_calories_day" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calories"
                android:gravity="center"
                android:layout_marginLeft="27dp"
                android:textSize="@dimen/font_component"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/layout_proteins_day">
            <com.haleat.haleat.RectView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/rect_proteins_day" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/proteins"
                android:gravity="center"
                android:layout_marginLeft="27dp"
                android:textSize="@dimen/font_component"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/layout_grams_day">
            <com.haleat.haleat.RectView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/rect_grams_day" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/grams"
                android:gravity="center"
                android:layout_marginLeft="27dp"
                android:textSize="@dimen/font_component"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
