<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lpro.haleater.WeekStadisticFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"
            android:id="@+id/layout_calories_week">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_calorias_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="italic"/>

                <RelativeLayout
                    android:id="@+id/relativelayoutCaloriesWeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/text_calorias_week">

                    <com.lpro.haleater.RectView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/rect_calories_week"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calories"
                android:gravity="center"
                android:textSize="@dimen/font_component"
                android:textStyle="italic"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"
            android:id="@+id/layout_proteins_week">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_proteinas_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="italic"/>

                <RelativeLayout
                    android:id="@+id/relativelayoutProteinasWeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/text_proteinas_week">

                    <com.lpro.haleater.RectView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/rect_proteins_week"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/proteins"
                android:gravity="center"
                android:textSize="@dimen/font_component"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:id="@+id/layout_grasas_week">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_grasas_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="italic"/>

                <RelativeLayout
                    android:id="@+id/relativelayoutGrasasWeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/text_grasas_week">

                    <com.lpro.haleater.RectView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/rect_grasas_week"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/grasas"
                android:gravity="center"
                android:textSize="@dimen/font_component"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:id="@+id/layout_hidratos_week">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_hidratos_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="italic"/>

                <RelativeLayout
                    android:id="@+id/relativelayoutHidratosWeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/text_hidratos_week">

                    <com.lpro.haleater.RectView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/rect_hidratos_week"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hidratos"
                android:gravity="center"
                android:textSize="@dimen/font_component"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:id="@+id/layout_azucar_week">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_azucar_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="italic"/>

                <RelativeLayout
                    android:id="@+id/relativelayoutAzucarWeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/text_azucar_week">

                    <com.lpro.haleater.RectView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/rect_azucar_week"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/azucar"
                android:gravity="center"
                android:textSize="@dimen/font_component"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
